--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production",
+    "start": "webpack serve --mode development --open --hot",
+    "build p": "webpack --mode production",
     "prestart": "npm run build",
-    "start": "webpack --mode development"
+    "build": "webpack --mode development"
   },
   "dependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
     "@mui/material": "5.9.2",
     "@reduxjs/toolkit": "1.8.3",
+    "@typescript-eslint/parser": "^5.32.0",
     "axios": "0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,22 @@
     "styled-components": "^5.3.5",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.7.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
@@ -30,8 +47,19 @@
     "@types/react": "18",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
     "babel-loader": "^8.2.5",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.7.1",
     "ts-loader": "^9.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
