--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-without-cra",
+  "name": "react-hook-form-with-mui",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
